--- a/style.css
+++ b/style.css
@@ -840,7 +840,7 @@ footer hr{
 	
 }
 
-@media (max-width:1024px) and (max-height:657px){
+@media (max-width:1024px) and (min-height:657px){
 	.rang{
 		transform: translate(5%, 180%);
 	}
@@ -863,7 +863,7 @@ footer hr{
 
 }
 
-@media (max-width:1024px) and (max-height:800px){
+@media (max-width:1024px) and (min-height:800px){
 	.apphead{
 		top: 140px;
 		width: 23vw;
@@ -891,7 +891,7 @@ footer hr{
 
 }
 
-@media (max-width:1024px) and (max-height:600px){
+@media (max-width:1024px) and (min-height:600px){
 	.apphead{
 		top: 140px;
 		width: 20vw;
@@ -926,7 +926,30 @@ footer hr{
 
 }
 
-@media (max-width:768px) and (max-height:1024px){
+@media (max-width:768px) and (min-height:1024px){
+	.header{
+		padding: 40px 60px 0 60px ;
+		position: relative;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	
+	.logo a{
+		display: block;
+	}
+	
+	.logo a img{
+		display: block;
+		width: 150px;
+	}
+	
+	.store{
+		max-width: 150px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
 	.home-s{
 		font-size: 110px;
 	}
@@ -1244,16 +1267,7 @@ footer hr{
 
 }
 
-@media (max-width:384px) and (max-height:640px){
-	
-	
-	.box-1 h2{
-		margin-top: 50px;
-	}
-
-}
-
-@media (max-width:414px) and (max-height:736px){
+@media (max-width:384px) and (min-height:640px){
 	.header{
 		padding: 40px 60px 0 60px ;
 		position: relative;
@@ -1280,7 +1294,579 @@ footer hr{
 		align-items: center;
 	}
 	.home-s{
+		font-size: 60px;
+	}
+	
+	.car1{
+		width: 60%;
+		bottom: 140px;
+		left: -15%;
+	}
+	
+	.car2{
+		width: 75%;
+		bottom: 120px;
+		left: 6%;
+	}
+		
+	.car3{
+		width: 65%;
+		bottom: 140px;
+		left: 35%;
+	}
+	.car3:hover{
+		padding-left: 0;
+		
+	}
+	.apphead{
+		display: none;
+	}
+	
+	.gallery-1{
+		grid-template-columns: 100%;
+	}
+	
+	.gal-box-1{
+		margin-bottom: 250px;
+		width: 70%;
+		height: 80% ;
+	}
+	.pump{
+		top: 31%;
+	left: 25%;
+	}
+	
+	.line{
+		top: 41%;
+		left: 15%;
+	}
+	
+	.gg{
+		top: 53%;
+		left: 7%;
+	}
+	
+	.mpg{
+		font-size: 18px;
+		width: 60%;
+	}
+	
+	.hp{
+		font-size: 18px;
+		width: 60%;
+	}
+	
+	.vitesse{
+		font-size: 18px;
+		width: 60%;
+	}
+	.gal-box-1 h2{
+		font-size: 40px;
+	}
+	
+	.gal-box-1 h4{
+		font-size: 20px;
+	}
+	
+	.gal-box-2{
+		/* background-color:salmon; */
+		height: 50%;
+		margin-top: 0;
+		padding-left: 40px;
+	}
+	
+	.gal-box-2 h1{
 		font-size: 50px;
+		white-space: normal;
+	}
+	
+	.gal-box-2 p{
+		font-size: 18px;
+		white-space: normal;
+		width: 90%;
+	}
+	.rang{
+		width: 100%;
+		transform: translate(1%, 200%);
+		transition:1s ;
+	}
+	
+	.rang:hover{
+		padding-left: 0;
+		
+	}
+	.gallery-2{
+		display: none;
+	}
+	
+	
+	.delivred{
+		display: grid;
+		grid-template-columns: 100%;
+		padding: 100px 40px 0 40px;
+		height: 100vh;
+		margin-top: 300px;
+	}
+	
+	
+	.box-1 h2{
+		font-size: 50px;
+		white-space: normal;
+	}
+	
+	.box-1 p{
+		font-size: 18px;
+		white-space: normal;
+	}
+	.map{
+		width: 100%;
+		transform: translateX(1%);
+	}
+	
+	.map2{
+		max-width: 30%;
+		filter: drop-shadow(rgba(0, 0, 0, 0.4) -20px 20px 25px);
+		position: absolute;
+		transform: translate(-170%, -10%);
+	}
+	
+	.porche{
+	display: none;
+	}
+	.gallery-3{
+		display: grid;
+		grid-template-columns: 100%;
+		height:100vh;
+		width: 100%;
+		margin-bottom: 200px;
+	}
+	
+	.gal-box-5{
+		background-color: rgb(251, 200, 67);
+		width: 80%;
+		height: 80%; 
+		margin: 0 auto;
+	}
+	
+	.gal-box-6{
+		/* background-color:salmon; */
+		height: 50%;
+		margin-top: 0;
+		padding-left: 40px;
+	}
+	
+	.gal-box-6 h1{
+		font-size: 50px;
+		white-space: normal;
+	}
+	
+	.gal-box-6 p{
+		font-size: 18px;
+		white-space: normal;
+	}
+	
+	
+	.services{
+		grid-template-columns: 100%;
+		row-gap: 20px;
+	}
+	.coin, .doc, .wrench, p{
+		white-space: normal;
+		font-size: 18px;
+	}
+	.gallery-4{
+		display: grid;
+		grid-template-columns: 100%;
+		height:calc(100vh - 50px );
+		width: 100%;
+		margin-top: 50px;
+	}
+	
+	.gal-box-7{
+		background-color: rgb(251, 200, 67);
+		width: 80%;
+		height: 50%; 
+		margin: 110px auto 0 auto;
+	}
+	.gal-box-8{
+		margin-top: 0;
+		padding-left: 40px;
+	}
+	.gal-box-8 h1{
+		font-size: 50px;
+		white-space: normal;
+	}
+	
+	.gal-box-8 p{
+		font-size: 18px;
+		white-space: normal;
+		
+	}
+	
+	
+	.guy{
+		max-width:70%;
+		transform: translate(20%, -18%);
+	}
+	
+	.talya{
+		max-width: 100%;
+		transform: translate(5%, -100%);
+		transition: 0.5s;
+	}
+	
+	.talya:hover{
+		/* transform: translateX(50%); */
+		padding-left: 0;
+	}
+	
+	.gal-box-8 a{
+		color: rgb(65, 74, 105);
+		font-family: 'Poppins', sans-serif;
+		font-weight: bold;
+		font-size: 18px;
+		transition: 0.5s ;
+	}
+	.gal-box-8 a:hover {
+		color: rgb(7, 175, 175);
+		padding-left: 10px;
+		
+	}
+	.blacklogo{
+	   max-width: 130px;
+
+	}
+	
+	footer{
+		margin-top: 300px;
+		height: 220px;
+	}
+	
+	footer hr{
+		width: 80%;
+		margin: 0 auto;
+	}
+	
+	.faq{
+		display: none;
+	}
+
+}
+
+@media (max-width:360px) and (min-height:640px){
+	.header{
+		padding: 40px 60px 0 60px ;
+		position: relative;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-wrap: wrap;
+	}
+	
+	.logo a{
+		display: block;
+	}
+	
+	.logo a img{
+		display: block;
+		width: 150px;
+	}
+	
+	.store{
+		padding-top: 30px;
+		max-width: 150px;
+		display: flex;
+		justify-content:center;
+		align-items: center;
+	}
+	.home-s{
+		font-size: 60px;
+	}
+	
+	.car1{
+		width: 60%;
+		bottom: 140px;
+		left: -15%;
+	}
+	
+	.car2{
+		width: 75%;
+		bottom: 120px;
+		left: 6%;
+	}
+		
+	.car3{
+		width: 65%;
+		bottom: 140px;
+		left: 35%;
+	}
+	.car3:hover{
+		padding-left: 0;
+		
+	}
+	.apphead{
+		display: none;
+	}
+	
+	.gallery-1{
+		grid-template-columns: 100%;
+	}
+	
+	.gal-box-1{
+		margin-bottom: 250px;
+		width: 70%;
+		height: 80% ;
+	}
+	.pump{
+		top: 31%;
+	left: 25%;
+	}
+	
+	.line{
+		top: 41%;
+		left: 15%;
+	}
+	
+	.gg{
+		top: 53%;
+		left: 7%;
+	}
+	
+	.mpg{
+		font-size: 18px;
+		width: 60%;
+	}
+	
+	.hp{
+		font-size: 18px;
+		width: 60%;
+	}
+	
+	.vitesse{
+		font-size: 18px;
+		width: 60%;
+	}
+	.gal-box-1 h2{
+		font-size: 40px;
+	}
+	
+	.gal-box-1 h4{
+		font-size: 20px;
+	}
+	
+	.gal-box-2{
+		/* background-color:salmon; */
+		height: 50%;
+		margin-top: 0;
+		padding-left: 40px;
+	}
+	
+	.gal-box-2 h1{
+		font-size: 50px;
+		white-space: normal;
+	}
+	
+	.gal-box-2 p{
+		font-size: 18px;
+		white-space: normal;
+		width: 90%;
+	}
+	.rang{
+		width: 100%;
+		transform: translate(1%, 200%);
+		transition:1s ;
+	}
+	
+	.rang:hover{
+		padding-left: 0;
+		
+	}
+	.gallery-2{
+		display: none;
+	}
+	
+	
+	.delivred{
+		display: grid;
+		grid-template-columns: 100%;
+		padding: 100px 40px 0 40px;
+		height: 100vh;
+		margin-top: 350px;
+	}
+	
+	
+	.box-1 h2{
+		font-size: 50px;
+		white-space: normal;
+	}
+	
+	.box-1 p{
+		font-size: 18px;
+		white-space: normal;
+	}
+	.map{
+		width: 100%;
+		transform: translateX(1%);
+	}
+	
+	.map2{
+		max-width: 30%;
+		filter: drop-shadow(rgba(0, 0, 0, 0.4) -20px 20px 25px);
+		position: absolute;
+		transform: translate(-170%, -10%);
+	}
+	
+	.porche{
+	display: none;
+	}
+	.gallery-3{
+		display: grid;
+		grid-template-columns: 100%;
+		height:100vh;
+		width: 100%;
+		margin-bottom: 200px;
+	}
+	
+	.gal-box-5{
+		background-color: rgb(251, 200, 67);
+		width: 80%;
+		height: 80%; 
+		margin: 0 auto;
+	}
+	
+	.gal-box-6{
+		/* background-color:salmon; */
+		height: 50%;
+		margin-top: 0;
+		padding-left: 40px;
+	}
+	
+	.gal-box-6 h1{
+		font-size: 50px;
+		white-space: normal;
+	}
+	
+	.gal-box-6 p{
+		font-size: 18px;
+		white-space: normal;
+	}
+	
+	
+	.services{
+		grid-template-columns: 100%;
+		row-gap: 20px;
+	}
+	.coin, .doc, .wrench, p{
+		white-space: normal;
+		font-size: 18px;
+	}
+	.gallery-4{
+		display: grid;
+		grid-template-columns: 100%;
+		height:calc(100vh - 50px );
+		width: 100%;
+		margin-top: 50px;
+	}
+	
+	.gal-box-7{
+		background-color: rgb(251, 200, 67);
+		width: 80%;
+		height: 50%; 
+		margin: 110px auto 0 auto;
+	}
+	.gal-box-8{
+		margin-top: 0;
+		padding-left: 40px;
+	}
+	.gal-box-8 h1{
+		font-size: 50px;
+		white-space: normal;
+	}
+	
+	.gal-box-8 p{
+		font-size: 18px;
+		white-space: normal;
+		
+	}
+	
+	
+	.guy{
+		max-width:70%;
+		transform: translate(20%, -18%);
+	}
+	
+	.talya{
+		max-width: 100%;
+		transform: translate(5%, -100%);
+		transition: 0.5s;
+	}
+	
+	.talya:hover{
+		/* transform: translateX(50%); */
+		padding-left: 0;
+	}
+	
+	.gal-box-8 a{
+		color: rgb(65, 74, 105);
+		font-family: 'Poppins', sans-serif;
+		font-weight: bold;
+		font-size: 18px;
+		transition: 0.5s ;
+	}
+	.gal-box-8 a:hover {
+		color: rgb(7, 175, 175);
+		padding-left: 10px;
+		
+	}
+	.blacklogo{
+	   max-width: 130px;
+
+	}
+	
+	footer{
+		margin-top: 300px;
+		height: 220px;
+	}
+	
+	footer hr{
+		width: 80%;
+		margin: 0 auto;
+	}
+	
+	.faq{
+		display: none;
+	}
+
+}
+
+@media (max-width:411px) and (min-height:731px){
+	.header{
+		padding: 40px 60px 0 60px ;
+		position: relative;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-wrap: wrap;
+	}
+	
+	.logo a{
+		display: block;
+	}
+	
+	.logo a img{
+		display: block;
+		width: 150px;
+	}
+	
+	.store{
+		padding-top: 30px;
+		max-width: 150px;
+		display: flex;
+		justify-content:center;
+		align-items: center;
+	}
+	.home-s{
+		font-size: 60px;
 	}
 	
 	.car1{
@@ -1392,6 +1978,583 @@ footer hr{
 		padding: 100px 40px 0 40px;
 		height: 100vh;
 		margin-top: 250px;
+	}
+	
+	
+	.box-1 h2{
+		font-size: 50px;
+		white-space: normal;
+	}
+	
+	.box-1 p{
+		font-size: 18px;
+		white-space: normal;
+	}
+	.map{
+		width: 100%;
+		transform: translateX(1%);
+	}
+	
+	.map2{
+		max-width: 30%;
+		filter: drop-shadow(rgba(0, 0, 0, 0.4) -20px 20px 25px);
+		position: absolute;
+		transform: translate(-170%, -10%);
+	}
+	
+	.porche{
+	display: none;
+	}
+	.gallery-3{
+		display: grid;
+		grid-template-columns: 100%;
+		height:100vh;
+		width: 100%;
+		margin-bottom: 200px;
+	}
+	
+	.gal-box-5{
+		background-color: rgb(251, 200, 67);
+		width: 80%;
+		height: 80%; 
+		margin: 0 auto;
+	}
+	
+	.gal-box-6{
+		/* background-color:salmon; */
+		height: 50%;
+		margin-top: 0;
+		padding-left: 40px;
+	}
+	
+	.gal-box-6 h1{
+		font-size: 50px;
+		white-space: normal;
+	}
+	
+	.gal-box-6 p{
+		font-size: 18px;
+		white-space: normal;
+	}
+	
+	
+	.services{
+		grid-template-columns: 100%;
+		row-gap: 20px;
+	}
+	.coin, .doc, .wrench, p{
+		white-space: normal;
+		font-size: 18px;
+	}
+	.gallery-4{
+		display: grid;
+		grid-template-columns: 100%;
+		height:calc(100vh - 50px );
+		width: 100%;
+		margin-top: 50px;
+	}
+	
+	.gal-box-7{
+		background-color: rgb(251, 200, 67);
+		width: 80%;
+		height: 50%; 
+		margin: 110px auto 0 auto;
+	}
+	.gal-box-8{
+		margin-top: 0;
+		padding-left: 40px;
+	}
+	.gal-box-8 h1{
+		font-size: 50px;
+		white-space: normal;
+	}
+	
+	.gal-box-8 p{
+		font-size: 18px;
+		white-space: normal;
+		
+	}
+	
+	
+	.guy{
+		max-width:70%;
+		transform: translate(20%, -18%);
+	}
+	
+	.talya{
+		max-width: 100%;
+		transform: translate(5%, -100%);
+		transition: 0.5s;
+	}
+	
+	.talya:hover{
+		/* transform: translateX(50%); */
+		padding-left: 0;
+	}
+	
+	.gal-box-8 a{
+		color: rgb(65, 74, 105);
+		font-family: 'Poppins', sans-serif;
+		font-weight: bold;
+		font-size: 18px;
+		transition: 0.5s ;
+	}
+	.gal-box-8 a:hover {
+		color: rgb(7, 175, 175);
+		padding-left: 10px;
+		
+	}
+	.blacklogo{
+	   max-width: 130px;
+
+	}
+	
+	footer{
+		margin-top: 300px;
+		height: 220px;
+	}
+	
+	footer hr{
+		width: 80%;
+		margin: 0 auto;
+	}
+	
+	.faq{
+		display: none;
+	}
+	
+
+}
+
+
+
+@media (max-width:414px) and (min-height:736px){
+	.header{
+		padding: 40px 60px 0 60px ;
+		position: relative;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-wrap: wrap;
+	}
+	
+	.logo a{
+		display: block;
+	}
+	
+	.logo a img{
+		display: block;
+		width: 150px;
+	}
+	
+	.store{
+		padding-top: 30px;
+		max-width: 150px;
+		display: flex;
+		justify-content:center;
+		align-items: center;
+	}
+	.home-s{
+		font-size: 60px;
+	}
+	
+	.car1{
+		width: 60%;
+		bottom: 160px;
+		left: -15%;
+	}
+	
+	.car2{
+		width: 75%;
+		bottom: 140px;
+		left: 6%;
+	}
+		
+	.car3{
+		width: 65%;
+		bottom: 160px;
+		left: 35%;
+	}
+	.car3:hover{
+		padding-left: 0;
+		
+	}
+	.apphead{
+		display: none;
+	}
+	
+	.gallery-1{
+		grid-template-columns: 100%;
+	}
+	
+	.gal-box-1{
+		margin-bottom: 250px;
+		width: 70%;
+		height: 80% ;
+	}
+	.pump{
+		top: 31%;
+	left: 25%;
+	}
+	
+	.line{
+		top: 41%;
+		left: 15%;
+	}
+	
+	.gg{
+		top: 53%;
+		left: 7%;
+	}
+	
+	.mpg{
+		font-size: 18px;
+		width: 60%;
+	}
+	
+	.hp{
+		font-size: 18px;
+		width: 60%;
+	}
+	
+	.vitesse{
+		font-size: 18px;
+		width: 60%;
+	}
+	.gal-box-1 h2{
+		font-size: 40px;
+	}
+	
+	.gal-box-1 h4{
+		font-size: 20px;
+	}
+	
+	.gal-box-2{
+		/* background-color:salmon; */
+		height: 50%;
+		margin-top: 0;
+		padding-left: 40px;
+	}
+	
+	.gal-box-2 h1{
+		font-size: 50px;
+		white-space: normal;
+	}
+	
+	.gal-box-2 p{
+		font-size: 18px;
+		white-space: normal;
+		width: 90%;
+	}
+	.rang{
+		width: 100%;
+		transform: translate(1%, 200%);
+		transition:1s ;
+	}
+	
+	.rang:hover{
+		padding-left: 0;
+		
+	}
+	.gallery-2{
+		display: none;
+	}
+	
+	
+	.delivred{
+		display: grid;
+		grid-template-columns: 100%;
+		padding: 100px 40px 0 40px;
+		height: 100vh;
+		margin-top: 250px;
+	}
+	
+	
+	.box-1 h2{
+		font-size: 50px;
+		white-space: normal;
+	}
+	
+	.box-1 p{
+		font-size: 18px;
+		white-space: normal;
+	}
+	.map{
+		width: 100%;
+		transform: translateX(1%);
+	}
+	
+	.map2{
+		max-width: 30%;
+		filter: drop-shadow(rgba(0, 0, 0, 0.4) -20px 20px 25px);
+		position: absolute;
+		transform: translate(-170%, -10%);
+	}
+	
+	.porche{
+	display: none;
+	}
+	.gallery-3{
+		display: grid;
+		grid-template-columns: 100%;
+		height:100vh;
+		width: 100%;
+		margin-bottom: 200px;
+	}
+	
+	.gal-box-5{
+		background-color: rgb(251, 200, 67);
+		width: 80%;
+		height: 80%; 
+		margin: 0 auto;
+	}
+	
+	.gal-box-6{
+		/* background-color:salmon; */
+		height: 50%;
+		margin-top: 0;
+		padding-left: 40px;
+	}
+	
+	.gal-box-6 h1{
+		font-size: 50px;
+		white-space: normal;
+	}
+	
+	.gal-box-6 p{
+		font-size: 18px;
+		white-space: normal;
+	}
+	
+	
+	.services{
+		grid-template-columns: 100%;
+		row-gap: 20px;
+	}
+	.coin, .doc, .wrench, p{
+		white-space: normal;
+		font-size: 18px;
+	}
+	.gallery-4{
+		display: grid;
+		grid-template-columns: 100%;
+		height:calc(100vh - 50px );
+		width: 100%;
+		margin-top: 50px;
+	}
+	
+	.gal-box-7{
+		background-color: rgb(251, 200, 67);
+		width: 80%;
+		height: 50%; 
+		margin: 110px auto 0 auto;
+	}
+	.gal-box-8{
+		margin-top: 0;
+		padding-left: 40px;
+	}
+	.gal-box-8 h1{
+		font-size: 50px;
+		white-space: normal;
+	}
+	
+	.gal-box-8 p{
+		font-size: 18px;
+		white-space: normal;
+		
+	}
+	
+	
+	.guy{
+		max-width:70%;
+		transform: translate(20%, -18%);
+	}
+	
+	.talya{
+		max-width: 100%;
+		transform: translate(5%, -100%);
+		transition: 0.5s;
+	}
+	
+	.talya:hover{
+		/* transform: translateX(50%); */
+		padding-left: 0;
+	}
+	
+	.gal-box-8 a{
+		color: rgb(65, 74, 105);
+		font-family: 'Poppins', sans-serif;
+		font-weight: bold;
+		font-size: 18px;
+		transition: 0.5s ;
+	}
+	.gal-box-8 a:hover {
+		color: rgb(7, 175, 175);
+		padding-left: 10px;
+		
+	}
+	.blacklogo{
+	   max-width: 130px;
+
+	}
+	
+	footer{
+		margin-top: 300px;
+		height: 220px;
+	}
+	
+	footer hr{
+		width: 80%;
+		margin: 0 auto;
+	}
+	
+	.faq{
+		display: none;
+	}
+	
+
+}
+
+
+@media (max-width:393px) and (min-height:851px){
+	.header{
+		padding: 40px 60px 0 60px ;
+		position: relative;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-wrap: wrap;
+	}
+	
+	.logo a{
+		display: block;
+	}
+	
+	.logo a img{
+		display: block;
+		width: 150px;
+	}
+	
+	.store{
+		padding-top: 30px;
+		max-width: 150px;
+		display: flex;
+		justify-content:center;
+		align-items: center;
+	}
+	.home-s{
+		font-size: 60px;
+	}
+	
+	.car1{
+		width: 60%;
+		bottom: 200px;
+		left: -15%;
+	}
+	
+	.car2{
+		width: 75%;
+		bottom: 180px;
+		left: 6%;
+	}
+		
+	.car3{
+		width: 65%;
+		bottom: 200px;
+		left: 35%;
+	}
+	.car3:hover{
+		padding-left: 0;
+		
+	}
+	.apphead{
+		display: none;
+	}
+	
+	.gallery-1{
+		grid-template-columns: 100%;
+	}
+	
+	.gal-box-1{
+		margin-bottom: 250px;
+		width: 70%;
+		height: 80% ;
+	}
+	.pump{
+		top: 31%;
+	left: 25%;
+	}
+	
+	.line{
+		top: 41%;
+		left: 15%;
+	}
+	
+	.gg{
+		top: 53%;
+		left: 7%;
+	}
+	
+	.mpg{
+		font-size: 18px;
+		width: 60%;
+	}
+	
+	.hp{
+		font-size: 18px;
+		width: 60%;
+	}
+	
+	.vitesse{
+		font-size: 18px;
+		width: 60%;
+	}
+	.gal-box-1 h2{
+		font-size: 40px;
+	}
+	
+	.gal-box-1 h4{
+		font-size: 20px;
+	}
+	
+	.gal-box-2{
+		/* background-color:salmon; */
+		height: 50%;
+		margin-top: 0;
+		padding-left: 40px;
+	}
+	
+	.gal-box-2 h1{
+		font-size: 50px;
+		white-space: normal;
+	}
+	
+	.gal-box-2 p{
+		font-size: 18px;
+		white-space: normal;
+		width: 90%;
+	}
+	.rang{
+		width: 100%;
+		transform: translate(1%, 200%);
+		transition:1s ;
+	}
+	
+	.rang:hover{
+		padding-left: 0;
+		
+	}
+	.gallery-2{
+		display: none;
+	}
+	
+	
+	.delivred{
+		display: grid;
+		grid-template-columns: 100%;
+		padding: 100px 40px 0 40px;
+		height: 100vh;
+		margin-top: 100px;
 	}
 	
 	
